--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,17 +4,15 @@
   background-color: #0c0c14;
 
   height: 4vh;
-  border-radius: 60px;
-  width: 20vw;
+  border-radius: 15px;
+  width: 30vw;
   color: white;
-  font-size: 2vh;
   font-size: 1.5vh;
-  text-indent: 1vw;
+  align-items:start;
+  justify-content:center;
   border-style: none;
-  background-image: url("./images/searchIcon.svg");
-  background-repeat: no-repeat;
-  background-size:1vw;
-  background-position: left 1vw top 1.2vh;
+  
+
 }
 .input::placeholder {
   text-indent: 2vw;
