Done with Header

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -44,10 +44,13 @@
 }
 
 .containedBtn {
-  height: 3vh;
+  height: 4vh;
+  font-weight: 800 !important;
   
 }
 
 .textBtn{
+  font-weight: 300 !important;
+  font-family: "Roboto";
   color: white !important;
 }
