--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -1,21 +1,21 @@
 .image{
     border-radius: 100%;
-
+position: relative;
     width:100%;
     height:100%;
 }
 
 .badge{
-    position: absolute;
-    left:80%;
-    bottom:5%;
-  
+    
+  position: relative;
+  top: -25%;
+  left:80%;
     margin-left: 0vw;
     width:20%;
     height:20%;
 }
 .avatar{
-  
-    position: relative;
-    left:100px
+    
+ 
+    
 }
