--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -1,4 +1,4 @@
-@use "../../styles/colors.scss" as *;
+@use "../../styles/colors" as colors;
 
 .user{
     
@@ -10,14 +10,15 @@
 }
 
 .name{
-    color: $text_primary;
+     
+    color: colors.$text_primary;
    font-size: 0.7rem; 
   margin: 0;
     
 }
 
 .info{
-    color: $secondary_main;
+    color: colors.$secondary_main;
     font-size: 0.7rem; 
     
     
