--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -1,21 +1,19 @@
-.image{
-    border-radius: 100%;
-position: relative;
-    width:100%;
-    height:100%;
+.image {
+  border-radius: 100%;
+  
+  width: 100%;
+  height: 100%;
 }
 
-.badge{
-    
-  position: relative;
-  top: -25%;
-  left:80%;
-    margin-left: 0vw;
-    width:20%;
-    height:20%;
-}
-.avatar{
-    
+.badge {
+  position: absolute;
+  top: 75%;
+  left: 75%;
  
-    
+  width: 40%;
+  height: 40%;
+}
+.avatar {
+  position: relative;
+  
 }
