Add Collector and CollectorColumn components

--- a/src/components/user/User.module.scss
+++ b/src/components/user/User.module.scss
@@ -7,20 +7,24 @@
     grid-template-rows: auto;
     align-items: center;
     line-height: 0.7rem;
+    
 }
 
 .name{
      
     color: colors.$text_primary;
-   font-size: 0.7rem; 
-  margin: 0;
+   font-size: 1rem; 
+   font-weight: 700;
+    margin-bottom: 10%;
     
 }
 
 .info{
+   
+    width: 200%;
     color: colors.$secondary_main;
-    font-size: 0.7rem; 
-    
+    font-size: 1rem; 
+   font-weight: 700;
 }
 
 .avatar{ 
