--- a/src/components/featured/Featured.module.scss
+++ b/src/components/featured/Featured.module.scss
@@ -1,8 +1,14 @@
 .image{
     border-radius: 30px !important;
-    width: 98% !important;
-    height: 100% !important;
+    width:15vw !important;
+    height: 15vh !important;
     
+}
+
+.big-image{
+    border-radius: 30px !important;
+    width:30vw !important;
+    height: 30vh !important;
 }
 
 .wraper{
