--- a/src/components/product/ProductInfoTitle.module.scss
+++ b/src/components/product/ProductInfoTitle.module.scss
@@ -1,6 +1,6 @@
 .product-info-title{
-    border:1px solid black;
+    border:1px solid white;
 }
 .title{
-    border:1px solid black;
+    border:1px solid red;
 }
