--- a/src/components/product/ProductInfoTimer.module.scss
+++ b/src/components/product/ProductInfoTimer.module.scss
@@ -1,4 +1,4 @@
-@use "../../styles/colors.scss";
+@use "../../styles/colors";
 
 .product-info-timer{
     border: 1px solid blue;
@@ -7,5 +7,6 @@
     border: 1px solid blue;
 }
 .timer{
-    border: 1px solid blue;
+    
+    background-color: colors.$secondary_main;
 }
