--- a/src/components/product/ProductTabs.module.scss
+++ b/src/components/product/ProductTabs.module.scss
@@ -10,3 +10,10 @@ background-color: colors.$primary_main;
 .product-tabs{
     border:1px solid white;
 }
+
+.tab-details{
+    border:1px solid white;
+}
+.tab-bids{
+    border:1px solid white;
+}
